--- a/인크커피.html
+++ b/인크커피.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>인크커피</title>
+    <style>
+        ul.a {
+            width: 400px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
 <body align="center">
     <header>
@@ -21,7 +28,7 @@
             <br /> 
             <span> <a target="_blank" href="https://map.naver.com/v5/search/%EC%9D%B8%ED%81%AC%EC%BB%A4%ED%94%BC/place/1232726331?c=14123066.1486908,4506136.6424486,15,0,0,0,dh&placePath=%3Fentry%253Dpll"> 위치 ></a></span>   
             <div>
-                <ul>
+                <ul class="a" align="left">
                     <!--마크가 왼쪽으로 붙는데 안쪽으로 넣을 수는 없나..?-->
                     <li>좌석 꽤 많지만 자리가 잘 안남</li>
                     <li>커피맛은 그냥저냥인거 같고 인스타 감성으로 가는곳</li>
