--- a/아울렛.html
+++ b/아울렛.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>아울렛</title>
+    <style>
+        ul.a{
+            width: 400px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+    </style>
 </head>
 <body align="center">
     <header>
@@ -20,8 +28,7 @@
             <br /> 
             <span> <a target="_blank" href="https://map.naver.com/v5/entry/address/14125115.996926215,4505933.005185235,%EC%84%9C%EC%9A%B8%ED%8A%B9%EB%B3%84%EC%8B%9C%20%EA%B8%88%EC%B2%9C%EA%B5%AC%20%EA%B0%80%EC%82%B0%EB%8F%99%2060-35,jibun?c=14124475.7206110,4505945.8121790,15,0,0,0,dh"> 아울렛 몰려있는 곳 ></a></span>   
             <div>
-                <ul>
-                    <!--마크가 왼쪽으로 붙는데 안쪽으로 넣을 수는 없나..?-->
+                <ul class="a" align="left">
                     <li>아울렛 건물만 7개 되는거 같음</li>
                     <li>안에 식당도 많고 영화관있는 건물도 있음</li>
                 </ul>           
