--- a/안양천.html
+++ b/안양천.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>안양천</title>
+    <style>
+        ul.a{
+            width: 400px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
 <body align="center">
     <header>
@@ -20,9 +27,8 @@
             <br /> 
             <span> <a target="_blank" href="https://map.naver.com/v5/entry/address/14123820.828046683,4506030.369591093,%EC%84%9C%EC%9A%B8%ED%8A%B9%EB%B3%84%EC%8B%9C%20%EA%B8%88%EC%B2%9C%EA%B5%AC%20%EA%B0%80%EC%82%B0%EB%8F%99%20544-13,jibun?c=14123748.8043361,4506091.6138228,16,0,0,0,dh"> 가산쪽 입구 위치 ></a></span>   
             <p>
-                <ul>
-                    <!--마크가 왼쪽으로 붙는데 안쪽으로 넣을 수는 없나..?-->
-                    <li>가산디지털단지 근처 입구에서 구일역 방면으로 걸어가다보면 있는 광명햇살광장이 예쁨</li>
+                <ul class="a" align="left">
+                    <li>가산디지털단지 근처 입구에서 구일역 방면으로<br>걸어가다보면 있는 광명햇살광장이 예쁨</li>
                     <li>벚꽃이 예쁨</li>
                 </ul>     
             </p>
