--- a/인크커피.html
+++ b/인크커피.html
@@ -34,7 +34,7 @@
                 </ul>                
             </div>   
             <p>
-                <a href="index.html"><< 메인으로 돌아가기</a>
+                <a href="index.html">< 메인으로 돌아가기</a>
             </p>    
         </article>
     </section>
