--- a/안양천.html
+++ b/안양천.html
@@ -25,7 +25,7 @@
             <img alt="안양천 벚꽃" width="340" height="255" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjA0MTBfMTkx%2FMDAxNjQ5NTUzNjI2MzUz.VV0Gqsvt_pj6nMtjxQ29YsZLtiwm5yqodeS3PligFmwg.YRUBvXjzw_PnLX-IBLjCzk3aYCRdpR_K25B4RrHNcXEg.JPEG.mgc21%2FIMG_4370.jpg&type=sc960_832" />
             <img alt="안양천 광명햇살광장" width="340" height="255" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTA0MTdfMjI0%2FMDAxNjE4NjE3Njk4NDIx.M9t7VZTnsZo7SGeCmPUiSJCQI9BymNv01_5qvOr_DIMg.wjJGBbBLddoKVNvrgyTBLwccNvEnmohKZ8mYG5EE6mAg.JPEG.cow2021goog%2FIMG_6868.jpg&type=sc960_832" /> 
             <br /> 
-            <span> <a target="_blank" href="https://map.naver.com/v5/entry/address/14123820.828046683,4506030.369591093,%EC%84%9C%EC%9A%B8%ED%8A%B9%EB%B3%84%EC%8B%9C%20%EA%B8%88%EC%B2%9C%EA%B5%AC%20%EA%B0%80%EC%82%B0%EB%8F%99%20544-13,jibun?c=14123748.8043361,4506091.6138228,16,0,0,0,dh"> 가산쪽 입구 위치 ></a></span>   
+            <span> <a target="_blank" href="https://map.naver.com/v5/entry/place/18979349?c=14123738.6519986,4505888.8751818,17,0,0,0,dh"> 가산쪽 입구 위치 ></a></span>   
             <div>
                 <ul class="a" align="left">
                     <li>가산디지털단지 근처 입구에서 구일역 방면으로<br>걸어가다보면 있는 광명햇살광장이 예쁨</li>
