레포지토리 이름 바꾸면 다시 땡겨와야 하는가?

--- a/인크커피.html
+++ b/인크커피.html
@@ -30,7 +30,7 @@
             <div>
                 <ul class="a" align="left">
                     <li>좌석 꽤 많지만 자리가 잘 안남</li>
-                    <li>커피맛은 그냥저냥인거 같고 감성으로 가는곳</li>
+                    <li>커피맛은 그냥 그렇고 감성으로 가는곳</li>
                 </ul>                
             </div>   
             <p>
